# bevy_game_template

./: Cargo.toml  TODO.md  index.html
assets/models/: enemy_0.glb  turret_0.glb
raw/: tower.blend
src/: assets.rs  bullet.rs  enemy.rs  ground.rs  lib.rs  loading.rs  main.rs  player.rs  tower.rs
