[package]
name = "bevy_game" # ToDo
version = "0.1.0"
publish = false
authors = ["Niklas Eicker <git@nikl.me>"] # ToDo: you are the author ;)
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[workspace]
members = ["mobile", "car", "track", "light", "overture_maps"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = [
    "bevy/bevy_dylib",
]

[workspace.dependencies]
bevy = { version = "0.11", default-features = false }
bevy_rapier3d = { version = "0.22.0", features = [
    "serde-serialize",
    "dim3",
], default-features = false }
cfg-if = "1.0.0"
rand = "0.8"

bevy_garage_camera = { path = "./camera" }
bevy_garage_car = { path = "./car", default-features = false }
bevy_garage_track = { path = "./track" }
bevy_garage_light = { path = "./light" }

[dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "hdr",
    "zstd",
    "x11",
    "ktx2",
    "filesystem_watcher",
    "tonemapping_luts",
    "webgl2"
] }
bevy_kira_audio = { version = "0.16" }
bevy_asset_loader = { version = "0.17" }
rand = { version = "0.8.3" }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.28", default-features = false }
image = { version = "0.24", default-features = false }
bevy_rapier3d = { workspace = true, features = ["debug-render-3d"] }

bevy_garage_camera = { workspace = true }
bevy_garage_car = { workspace = true, default-features = true }
bevy_garage_track = { workspace = true }
bevy_garage_light = { workspace = true }

[build-dependencies]
embed-resource = "1.4"
